--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h5,
 h6 {
   padding:0;
   margin:0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .clear-fix {
@@ -26,7 +26,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: darkcyan;
   line-height: 48px;
   display: inline;
 }
@@ -100,16 +100,16 @@ a {
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: darkcyan;
   display: none;
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color: darkcyan;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: darkcyan;
 }
 
 .white-text {
